--- a/tarjeta.html
+++ b/tarjeta.html
@@ -1,4 +1,4 @@
-<div class="tarjeta">
+<!-- <div class="tarjeta">
 	<div class="row full-width">
 		<div class="col-md-6 full-width">
 			<img class="img-tarjeta" src="images/bebida.jpg">
@@ -13,10 +13,39 @@
 					<span class="precio">Precio 15€</span>
 				</div>
 				<div class="col-md-4">
-					<input type="number" class="select-numero">
+					<input type="number" class="select-numero" min= "1">
 				</div>
+			</div>
+			<div class="row full-width">
+				<button class="seleccionar">Seleccionar</button>
 			</div>
 		</div>	
 	</div>
 
+</div> -->
+
+
+
+<div class="tarjeta" id="hiddenCard" hidden>
+	<div class="row full-width">
+		<div class="col-md-6 full-width">
+			<img class="img-tarjeta" src="">
+		</div>
+		<div class="col-md-6">
+			<div class="row full-width">
+				<span class="title" data-toggle="tooltip" data-placement="bottom" title=""></span>
+			</div>
+			<div class="row full-width price">
+				<div class="col-md-8">
+					<span class="precio"></span>
+				</div>
+				<div class="col-md-4">
+					<input type="number" class="select-numero" value="1" min="1">
+				</div>
+			</div>
+			<div class="row full-width">
+				<button data-name="" data-price="" class="seleccionar">Seleccionar</button>
+			</div>
+		</div>
+	</div>
 </div>
